# chat_code_memory_mcp

./: .gitignore  QWEN.md  README.md  pyproject.toml
.planning/: 1-01-PLAN.md  1-01-SUMMARY.md  1-01-VALIDATION.md  1-CONTEXT.md  1-RESEARCH.md  1-REVIEW.md  1-UAT.md  2-01-PLAN.md  2-01-SUMMARY.md  2-01-VALIDATION.md  2-CONTEXT.md  2-RESEARCH.md  2-REVIEW.md  2-UAT.md  3-01-PLAN.md  3-01-SUMMARY.md  3-01-VALIDATION.md  3-01-WAVE1-SUMMARY.md  3-01-WAVE2-SUMMARY.md  3-01-WAVE3-SUMMARY.md  3-CONTEXT.md  3-RESEARCH.md  3-REVIEW.md  3-SHIP.md  3-UAT.md  3-VERIFICATION.md  4-01-CHECKPOINT.md  4-01-PLAN.md  4-01-SUMMARY.md  4-01-WAVE1-SUMMARY.md  4-01-WAVE2-SUMMARY.md  4-01-WAVE3-SUMMARY.md  4-CONTEXT.md  4-REVIEW.md  4-SHIP.md  4-UAT.md  4-VERIFICATION.md  5-01-PLAN.md  5-01-SUMMARY.md  5-01-VALIDATION.md  (+22 more)
data/: config.json  session_index.json
data/chromadb/: chroma.sqlite3
scripts/: test_ping_stdio.py  test_t1.py  uat_phase1.py  uat_phase1_out.txt  uat_phase1_results.txt  uat_phase2.py  uat_phase4.py  uat_phase4_results.json  verify_phase3.py  verify_phase4.py  verify_server.py
scripts/uat_chromadb/: chroma.sqlite3
src/context_memory_mcp/: __init__.py  __main__.py  auto_retrieve.py  auto_save.py  chat_store.py  cli.py  config.py  context.py  embeddings.py  file_graph.py  file_watcher.py  intent_classifier.py  mcp_server.py  parser.py
tests/: conftest.py  test_auto_e2e.py  test_auto_retrieve.py  test_auto_save.py  test_chat_store.py  test_context.py  test_file_graph.py  test_file_watcher.py  test_integration.py  test_intent_classifier.py  test_parser.py
